# src/routes/offerLetter.routes.js
@@ -8,10 +8,11 @@ const ctrl = require('../controllers/offerLetter.controller');
 
 // admin only
 
-router.get('/offer-letter/positions', authenticate, ctrl.listPositions);
-router.post('/offer-letter/position', authenticate, ctrl.findOrCreatePosition);
-router.get('/offer-latter/addresses', authenticate, ctrl.listAddresses);
-router.post('/offer-letter/addresses', authenticate, ctrl.findOrCreateAddress);
+router.get('/offer-letter/positions', authenticate, requireAdmin, ctrl.listPositions);
+router.post('/offer-letter/positions', authenticate, requireAdmin, ctrl.findOrCreatePosition);
+router.get('/offer-letter/addresses', authenticate, requireAdmin, ctrl.listAddresses);
+router.post('/offer-letter/addresses', authenticate,  requireAdmin, ctrl.findOrCreateAddress);
+
 
 // generate
 router.post('/offer-letter/generate/:application_id', authenticate, ctrl.generateOfferLetter);
